Add a time-discovery panel
Recommends available times for the current hard criteria the user has set (e.g. party size 3, Indoor)
